--- a/t.html
+++ b/t.html
@@ -1,146 +1,85 @@
 <html>
- <head>
-  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <style>
-   .payment-method {
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 20px;
-            margin-top: 20px;
-        }
-        .payment-method img {
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
-        }
-        .payment-method label {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-        .btn-complete {
-            background-color: #007bff;
-            color: white;
-        }
-        .order-summary {
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 20px;
-            margin-top: 20px;
-        }
-        .order-summary h5 {
-            margin-bottom: 20px;
-        }
-        .order-summary .summary-item {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        @media (max-width: 576px) {
-            .payment-method label {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-            .payment-method img {
-                margin-bottom: 10px;
-            }
-            .order-summary .summary-item {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-            .order-summary .summary-item span,
-            .order-summary .summary-item strong {
-                margin-bottom: 5px;
-            }
-        }
-  </style>
- </head>
- <body>
-  <div class="container">
-   <div class="order-summary">
-    <h5>
-     Thông tin đơn hàng
-    </h5>
-    <div class="summary-item">
-     <span>
-      Tổng giá trị sản phẩm:
-     </span>
-     <span>
-      1,000,000 VND
-     </span>
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f8f9fa;
+      }
+      .card {
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        max-width: 300px;
+        width: 100%;
+      }
+      .card-title {
+        color: #ff4081;
+        font-weight: bold;
+      }
+      .contact-info {
+        color: #ff4081;
+        font-weight: bold;
+        margin-top: 20px;
+      }
+      .contact-details {
+        margin-top: 10px;
+      }
+      .map-container {
+        width: 100%;
+        height: 400px; /* Điều chỉnh kích thước bản đồ */
+        background-color: #ccc;
+        border-radius: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Cột tìm kiếm cửa hàng -->
+        <div class="col-md-3 col-12 mb-4">
+          <div class="card">
+            <h5 class="card-title">Tìm cửa hàng</h5>
+            <div class="mb-3">
+              <label for="province" class="form-label">Chọn tỉnh thành</label>
+              <select class="form-select" id="province">
+                <option selected>Lạng Sơn</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="store" class="form-label">Chọn cửa hàng</label>
+              <select class="form-select" id="store">
+                <option selected>Khangbaby Mẹt</option>
+              </select>
+            </div>
+            <div class="contact-info">
+              <i class="fas fa-map-marker-alt"></i> Địa chỉ liên hệ
+            </div>
+            <div class="contact-details">
+              <p>Số 55 Chi Lăng - Hữu Lũng - Lạng Sơn</p>
+              <p>Hotline: 0352.89.2626</p>
+            </div>
+          </div>
+        </div>
+        
+        <!-- Cột bản đồ (9 cột) -->
+        <div class="col-md-9 col-12 mb-4">
+          <div class="map-container">
+            <!-- Đây là nơi bạn có thể nhúng Google Maps hoặc hình ảnh bản đồ -->
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.google.com/maps/embed/v1/place?q=55%20Chi%20L%C3%A2ng%20-%20H%E1%BB%AFu%20Lung%20-%20L%E1%BA%A1ng%20S%C6%A1n&t=k&z=13&key=YOUR_GOOGLE_MAPS_API_KEY"
+              frameborder="0" style="border:0" allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="summary-item">
-     <span>
-      Phí ship:
-     </span>
-     <span>
-      25,000 VND
-     </span>
-    </div>
-    <div class="summary-item">
-     <strong>
-      Tổng giá tiền:
-     </strong>
-     <strong>
-      1,025,000 VND
-     </strong>
-    </div>
-   </div>
-   <div class="payment-method">
-    <h5>
-     Phương thức thanh toán
-    </h5>
-    <form>
-     <div class="form-check">
-      <label class="form-check-label">
-       <input class="form-check-input" name="paymentMethod" type="radio" value="cod"/>
-       <img alt="COD icon" src="https://placehold.co/30x30"/>
-       Thanh toán khi giao hàng (COD)
-      </label>
-     </div>
-     <div class="form-check">
-      <label class="form-check-label">
-       <input class="form-check-input" name="paymentMethod" type="radio" value="atm"/>
-       <img alt="ZaloPay icon" src="https://placehold.co/30x30"/>
-       <img alt="ATM icon" src="https://placehold.co/30x30"/>
-       Thanh toán bằng thẻ ATM nội địa qua ZaloPay
-      </label>
-     </div>
-     <div class="form-check">
-      <label class="form-check-label">
-       <input class="form-check-input" name="paymentMethod" type="radio" value="zalopay"/>
-       <img alt="ZaloPay icon" src="https://placehold.co/30x30"/>
-       Thanh toán bằng ZaloPay
-      </label>
-     </div>
-     <div class="form-check">
-      <label class="form-check-label">
-       <input class="form-check-input" name="paymentMethod" type="radio" value="visa"/>
-       <img alt="ZaloPay icon" src="https://placehold.co/30x30"/>
-       <img alt="Visa icon" src="https://placehold.co/30x30"/>
-       <img alt="MasterCard icon" src="https://placehold.co/30x30"/>
-       <img alt="JCB icon" src="https://placehold.co/30x30"/>
-       Thanh toán bằng thẻ Visa/Master/JCB qua ZaloPay
-      </label>
-     </div>
-     <div class="form-check">
-      <label class="form-check-label">
-       <input class="form-check-input" name="paymentMethod" type="radio" value="bank"/>
-       <img alt="Bank icon" src="https://placehold.co/30x30"/>
-       Chuyển khoản qua ngân hàng
-      </label>
-     </div>
-     <div class="d-flex justify-content-between mt-4">
-      <a class="btn btn-link" href="#">
-       Giỏ hàng
-      </a>
-      <button class="btn btn-complete ms-auto" type="submit">
-       Hoàn tất đơn hàng
-      </button>
-     </div>
-    </form>
-   </div>
-  </div>
- </body>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+  </body>
 </html>
