--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/div27nz1j/image/upload/v1737451253/1_vmcjnj.png" />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/div27nz1j/image/upload/v1737451253/1_vmcjnj.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
 
     <title>Baby Mart</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.botpress.cloud/webchat/v2.2/style.css"
+    />
   </head>
   <body>
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/01/08/18/20250108184349-T165EGRK.js"></script>
+
     <div id="root"></div>
-    
   </body>
 </html>
