--- a/t.html
+++ b/t.html
@@ -1,85 +1,137 @@
 <html>
-  <head>
+<head>
+    <title>Sự kiện</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f8f9fa;
-      }
-      .card {
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        max-width: 300px;
-        width: 100%;
-      }
-      .card-title {
-        color: #ff4081;
-        font-weight: bold;
-      }
-      .contact-info {
-        color: #ff4081;
-        font-weight: bold;
-        margin-top: 20px;
-      }
-      .contact-details {
-        margin-top: 10px;
-      }
-      .map-container {
-        width: 100%;
-        height: 400px; /* Điều chỉnh kích thước bản đồ */
-        background-color: #ccc;
-        border-radius: 10px;
-      }
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .event-title {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .event-card {
+            margin-bottom: 20px;
+        }
+        .event-card img {
+            width: 100%;
+            height: auto;
+        }
+        .event-card-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .event-card-subtitle {
+            font-size: 14px;
+            color: gray;
+        }
+        .event-card-text {
+            font-size: 14px;
+            margin-top: 10px;
+        }
+        .read-more {
+            color: red;
+            font-size: 14px;
+            margin-top: 10px;
+            display: inline-block;
+        }
+        .sidebar-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .sidebar-item {
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+        .pagination {
+            justify-content: center;
+        }
     </style>
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <!-- Cột tìm kiếm cửa hàng -->
-        <div class="col-md-3 col-12 mb-4">
-          <div class="card">
-            <h5 class="card-title">Tìm cửa hàng</h5>
-            <div class="mb-3">
-              <label for="province" class="form-label">Chọn tỉnh thành</label>
-              <select class="form-select" id="province">
-                <option selected>Lạng Sơn</option>
-              </select>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="event-title">Sự kiện</div>
             </div>
-            <div class="mb-3">
-              <label for="store" class="form-label">Chọn cửa hàng</label>
-              <select class="form-select" id="store">
-                <option selected>Khangbaby Mẹt</option>
-              </select>
-            </div>
-            <div class="contact-info">
-              <i class="fas fa-map-marker-alt"></i> Địa chỉ liên hệ
-            </div>
-            <div class="contact-details">
-              <p>Số 55 Chi Lăng - Hữu Lũng - Lạng Sơn</p>
-              <p>Hotline: 0352.89.2626</p>
-            </div>
-          </div>
         </div>
-        
-        <!-- Cột bản đồ (9 cột) -->
-        <div class="col-md-9 col-12 mb-4">
-          <div class="map-container">
-            <!-- Đây là nơi bạn có thể nhúng Google Maps hoặc hình ảnh bản đồ -->
-            <iframe
-              width="100%"
-              height="100%"
-              src="https://www.google.com/maps/embed/v1/place?q=55%20Chi%20L%C3%A2ng%20-%20H%E1%BB%AFu%20Lung%20-%20L%E1%BA%A1ng%20S%C6%A1n&t=k&z=13&key=YOUR_GOOGLE_MAPS_API_KEY"
-              frameborder="0" style="border:0" allowfullscreen>
-            </iframe>
-          </div>
+        <div class="row">
+            <div class="col-lg-9">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 event-card">
+                        <img src="https://placehold.co/300x200" alt="Black Friday event image">
+                        <div class="event-card-title">ĐẠI TIỆC BLACKFRIDAY SHOP KHANG BABY</div>
+                        <div class="event-card-subtitle">Shop Khang Baby | Th 4 27/11/2024</div>
+                        <div class="event-card-text">ĐẠI TIỆC BLACK FRIDAY CHÍNH THỨC BẮT ĐẦU! Hứa hẹn mang tới cho ba mẹ nhiều...</div>
+                        <a class="read-more" href="#">Đọc tiếp</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 event-card">
+                        <img src="https://placehold.co/300x200" alt="Mother's Day event image">
+                        <div class="event-card-title">NGÀY HỘI MẸ BẦU 2024 CỦA SHOP KHANG CÓ GÌ</div>
+                        <div class="event-card-subtitle">Shop Khang Baby | Th 4 6/11/2024</div>
+                        <div class="event-card-text">SỰ KIỆN NGÀY HỘI MẸ BẦU LỚN NHẤT BẮC GIANG CÓ GÌ? Chỉ có để "Hành trang đi sinh và thiên chức làm mẹ"...</div>
+                        <a class="read-more" href="#">Đọc tiếp</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 event-card">
+                        <img src="https://placehold.co/300x200" alt="National Day Sale event image">
+                        <div class="event-card-title">Tưng bừng mừng Quốc Khánh - Khang Baby Sale không phanh</div>
+                        <div class="event-card-subtitle">Shop Khang Baby | Th 7 31/08/2024</div>
+                        <div class="event-card-text">Chào mừng Quốc Khánh 2/9, Khang Baby hân hạnh mang tới chương trình giảm giá đặc biệt dành cho các bậc phụ huynh và các bé...</div>
+                        <a class="read-more" href="#">Đọc tiếp</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 event-card">
+                        <img src="https://placehold.co/300x200" alt="Livestream event image">
+                        <div class="event-card-title">Live tối 24/5/2024</div>
+                        <div class="event-card-subtitle">Shop Khang Baby | Th 6 24/05/2024</div>
+                        <div class="event-card-text">Hứa hẹn 1 phiên sale LIVE siêu hời! Vào xem LIVE ngay</div>
+                        <a class="read-more" href="#">Đọc tiếp</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 event-card">
+                        <img src="https://placehold.co/300x200" alt="Children's Day event image">
+                        <div class="event-card-title">Mừng Tết Thiếu Nhi - Quà Khang Baby là có QUÀ</div>
+                        <div class="event-card-subtitle">Shop Khang Baby | Th 2 18/5/2024</div>
+                        <div class="event-card-text">Từ 18/5/2024 - 2/6/2024 MỪNG TẾT THIẾU NHI! TỚI KHANG BABY LÀ CÓ QUÀ! Áp dụng cho quốc tế thiếu nhi 1.6 các bé có thể...</div>
+                        <a class="read-more" href="#">Đọc tiếp</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 event-card">
+                        <img src="https://placehold.co/300x200" alt="Livestream event image">
+                        <div class="event-card-title">Livestream tối 20/4/2024</div>
+                        <div class="event-card-subtitle">Shop Khang Baby | Th 6 20/04/2024</div>
+                        <div class="event-card-text">Hứa hẹn 1 phiên sale LIVE siêu hời! Vào xem LIVE ngay</div>
+                        <a class="read-more" href="#">Đọc tiếp</a>
+                    </div>
+                </div>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-lg-3">
+                          <div class="sidebar-title">TIN NỔI BẬT</div>
+                <div class="sidebar-item">
+                    <img src="https://placehold.co/300x200" alt="Highlight news image">
+                    <div>Lịch làm việc của một số đơn vị vận chuyển sẽ có sự thay đổi trong dịp Lễ Quốc Khánh 2/9/2024</div>
+                </div>
+                <div class="sidebar-item">
+                    <img src="https://placehold.co/300x200" alt="Highlight news image">
+                    <div>Sữa phát triển trí não toàn diện nhất 2023 hiện nay</div>
+                </div>
+                <div class="sidebar-item">
+                    <img src="https://placehold.co/300x200" alt="Highlight news image">
+                    <div>COMBO TRỌN BỘ VITAMIN BẦU CHUẨN ÚC ĐƯỢC CÁC BÀ MẸ TIN DÙNG 2023</div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+3i5Q0z1Kp4p6F5k5t5p5t5p5t5p5" crossorigin="anonymous"></script>
+</body>
 </html>
